constraints edit update
